[package]
name = "p2p_handshake_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitcoin = "0.31.1"
bytes = "1.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tokio = {version = "1.22.0", features = ["full"]}
tokio-test = "0.4.3"
